--- a/style.css
+++ b/style.css
@@ -10,6 +10,22 @@ body{
     color: white;
 }
 
+#fireworks-container {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 0; /* background */
+}
+
+#win, #new {
+    position: relative;
+    z-index: 1; /* above fireworks */
+}
+
+
+
 .final-msg{
     height: 100vmin;
     display: flex;
@@ -163,9 +179,10 @@ body{
     }
 
     .box {
-        height: 80px; /* Size 70px se badha kar 100px kar diya */
+        height: 80px; 
         width: 80px;
-        font-size: 45px; /* X aur O ka size bhi bada */
+        font-size: 45px; 
+        cursor: none;
         border-radius: 12px;
     }
 
@@ -196,7 +213,7 @@ body{
 
     #win{
         font-size: 25px;
-        padding-bottom: 30px;
+        padding-bottom: 120px;
         flex-wrap: wrap;
     }
 }
